@@ -37,6 +37,8 @@
    Avoid changing the tag tree if it's not the one of the current
    document, fixing showing the wrong tag list when reloading
    configuration files.
+ * src/search.c:
+   Fix pattern filtering when not searching in subdirectories.
 
 
 2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
